<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="hr.fesb.flaresync.ContactsActivity">
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_backup"
        android:title="@string/action_backup"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
